--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
   "author": "npenin",
+  "peerDependencies": {
+    "@akala/json-rpc-ws": "^4.1.23",
+    "@akala/server": "^2.0.28",
+    "@domojs/service-discovery": "^1.1.0"
+  },
   "dependencies": {
-    "@akala/server": "^1.0.57",
-    "@akala/json-rpc-ws": "^4.1.21",
-    "@domojs/service-discovery": "*",
-    "node-ssdp": "github:npenin/node-ssdp"
+    "ssdp-ts": "^3.2.1"
   },
   "deprecated": false,
   "description": "",
   "devDependencies": {
-    "snyk": "^1.30.1",
-    "@types/request": "^2.0.7",
-    "@types/ws": "^3.2.0",
-    "gulp": "^3.9.1",
-    "gulp-typescript": "^3.1.2"
+    "@akala/json-rpc-ws": "^4.1.23",
+    "@akala/server": "^2.0.28",
+    "@domojs/service-discovery": "^1.1.0",
+    "@types/node":"^8.10.0",
+    "@types/ws": "^5.1.2",
+    "snyk": "^1.30.1"
   },
   "license": "MIT",
   "main": "dist/index.js",
   "name": "@domojs/upnp",
   "scripts": {
-    "snyk-protect": "snyk protect",
-    "test": "echo \"Error: no test specified\" && exit 0",
-    "prepublishOnly": "tsc -p src"
+    "test": "echo \"Error: no test specified\"",
+    "build:js": "tsc -p src",
+    "build:js:routes": "browserify -x @akala/client -x @akala/core dist/client/routes.js -o dist/routes.js",
+    "build:js:tile": "browserify -x @akala/client -x @akala/core -i @domojs/theme-default/dist/tile dist/client/tile.js -o dist/tile.js",
+    "prepublishOnly": "npm run build",
+    "build": "npm run build:js"
   },
   "snyk": true,
   "typings": "dist/index.d.ts",
