added typing updated to latest akala better log handling

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "license": "MIT",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "name": "@domojs/upnp",
   "scripts": {
     "test": "echo \"Error: no test specified\"",
